gitops-manifests/frontend-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-web
  namespace: personality-simulation-engine-app

spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
        - name: personality-simulation-engine-registry-secret
      containers:
      - name: web
        image: registry.digitalocean.com/personality-simulation-engine-registry/frontend:latest


        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: personality-simulation-engine-app

spec:
  # CHANGE: From LoadBalancer to ClusterIP to save money
  type: ClusterIP 
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
